--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=VN-PAY
+
+payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.returnUrl=/vnpay-payment
+vnpay.tmnCode=BQ2W8Q7D
+vnpay.hashSecret=JYXYFBJNFYSLHJFUTNSIEGJKNKWPDUAO
+vnpay.apiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
