:whale: CRUD Product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=VN-PAY
 
-payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-vnpay.returnUrl=/vnpay-payment
-vnpay.tmnCode=BQ2W8Q7D
-vnpay.hashSecret=JYXYFBJNFYSLHJFUTNSIEGJKNKWPDUAO
-vnpay.apiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+spring.datasource.url=jdbc:postgresql://localhost:5432/vn-pay
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
